# operag

./: .gitignore  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.txt  NEURAL_NETWORK_IMPLEMENTATION.md  README.md  pyproject.toml  setup.py
.github/agents/: operag.md
examples/: demo.py  nn_demo.py
src/operag/: __init__.py
src/operag/hypergraph/: __init__.py  tensor_embeddings.py
src/operag/membranes/: __init__.py  prime_membranes.py
src/operag/nn/: __init__.py  activations.py  base.py  containers.py  layers.py  loss.py
src/operag/operad/: __init__.py  gadget_constellation.py
src/operag/resonance/: __init__.py  topological_matcher.py
tests/: test_hypergraph.py  test_integration.py  test_membranes.py  test_nn.py  test_operad.py  test_resonance.py
